# trafficlight-weatherapp

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
weatherapp/: .env-sample
weatherapp/bot/: main.py
weatherapp/core/: asgi.py  settings.py  urls.py  wsgi.py
weatherapp/weather/: constants.py  exceptions.py  models.py  providers.py  searializers.py  service.py  urls.py  views.py
weatherapp/weather/data/: places.json
